--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainMenuActivity">
 
-    <ImageView
-        android:id="@+id/mainPageLogo"
+    <ImageButton
+        android:id="@+id/mainMenuLogoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="LOGO"
@@ -25,7 +25,7 @@
         app:layout_constraintBottom_toTopOf="@id/notificationSettingButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainPageLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/mainMenuLogoButton" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/notificationSettingButton"
